src/snapshots/bluetui__help__tests__EnterPasskey-120.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                                             󱊷  Discard | ⇄ Nav | ↵  Submit                                             "
"                                                                                                                        "
