src/snapshots/bluetui__help__tests__NewDevices-120.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                        k,  Up | j,  Down | 󱁐  or ↵  Pair | s  Scan on/off | /  Search | ⇄ Nav                        "
"                                                                                                                        "
