src/snapshots/bluetui__help__tests__PairedDevices-121.snap
---
source: src/help.rs
expression: terminal.backend()
---
"k,  Up | j,  Down | s  Scan on/off | u  Unpair | 󱁐  or ↵  Dis/Connect | t Un/Trust | f Un/Favorite | e Rename | /  Sear"
"                                                                                                                         "
