src/snapshots/bluetui__help__tests__PairedDevices-81.snap
---
source: src/help.rs
expression: terminal.backend()
---
"        󱁐  or ↵  Dis/Connect | s  Scan on/off | u  Unpair | f Un/Favorite        "
"         t Un/Trust | e Rename | /  Search | k,  Up | j,  Down | ⇄ Nav         "
